Fixed Contact Form Overflow to red Issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1126,20 +1126,20 @@ address {
 
 #ContactForm {
   padding-bottom: 20px;
-  height: 100vh;
-  height: 93vh;
 }
 #ContactForm #FormContainer {
-  max-width: 650px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   margin: 0 auto;
   padding: 0px 20px;
+  max-width: 650px;
 }
 #ContactForm h1 {
   text-align: center;
 }
 #ContactForm .Social_Container_Contact {
-  max-width: 575px;
-  margin: 0px auto 2em auto;
+  padding-bottom: 2em;
 }
 #ContactForm #form_container {
   padding: 25px;
@@ -1148,6 +1148,7 @@ address {
 }
 #ContactForm #form_container #button {
   display: flex;
+  display: inherit;
   justify-content: center;
   width: 250px;
 }
@@ -1165,8 +1166,11 @@ address {
   width: 100%;
 }
 #ContactForm .form-example textarea {
-  height: 250px;
   vertical-align: top;
+}
+#ContactForm .form-example #message {
+  display: block;
+  height: 250px;
 }
 #ContactForm .form-example input,
 #ContactForm .form-example textarea {
